# multiplatform_gui

./: Cargo.toml  README.md
src/: main.rs
